Implementación del sistema multilenguaje + PT (Brasil)

--- a/js/lang/en.json
+++ b/js/lang/en.json
@@ -1,5 +1,5 @@
 ﻿{
   "title": "Welcome to my website",
   "description": "This is a work-in-progress space to share my projects, ideas and reflections about technical art and game development.",
-  "search_placeholder": "Search this site..."
+  "search_placeholder": "Search..."
 }
